--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "n1215/http-router",
-    "description": "PSR-7 / PSR-15 HTTP router interface.",
+    "description": "A PSR-7 compatible router interface and a PSR-15 RequestHandler implementation for routing.",
     "keywords": [
         "psr-7",
         "psr-15",
@@ -32,5 +32,15 @@
         "psr-4": {
             "N1215\\Http\\Router\\": "tests"
         }
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit"
+        ],
+        "coverage": [
+            "rm -rf ./build",
+            "mkdir ./build",
+            "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage --coverage-clover=build/coverage.clover"
+        ]
     }
 }
