--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "coverage": [
             "rm -rf ./build",
             "mkdir ./build",
-            "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage --coverage-clover=build/coverage.clover"
+            "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html build/coverage --coverage-clover build/coverage.clover"
         ]
     }
 }
